driver assigning errors handled
